# RocketC

./: README.txt
Flight_path/: .~lock.check.ods#  .~lock.check2.ods#  CMakeLists.txt  Flight_path_v1.cpp  Flight_path_v2.cpp  Flight_path_v3_orbit.cpp  Planets' position_v1.cpp  README.txt  RK.h  a.out  check.ods  check2.ods  dephem.hpp  final_flight_path.cpp  main.cpp  planets_position_v2.cpp
project/: .main.cpp.swp  CMakeLists.txt  LineRenderer.h  PlanetOrbit.h  camera.h  main  main.cpp  mesh.h  model.h  shader.fs  shader.h
project/UFO_Saucer_v1_L2.123c50bd261a-1751-44c1-b973-f0dd9e11cecd/include/glad/: glad.h
project/UFO_Saucer_v1_L2.123c50bd261a-1751-44c1-b973-f0dd9e11cecd/src/: glad.c
project/include/glad/include/glad/: glad.h
project/include/glad/src/: glad.c
reserve/: final_flight_path.cpp
